--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
 <body style="overflow-x:hidden; max-width:100%;">
 
     <header>
-        
-        <nav class="bg-white border-bottom box-shadow d-flex px-3 flex-wrap" id="navbar">
+       
+        <nav class="bg-white border-bottom box-shadow d-flex px-3 flex-wrap " id="navbar">
             <div class="d-flex align-items-center justify-content-center">
                 <label for="switch-aside" class="mb-0 hamber"><i class="bi bi-list hamber-i"></i></label><!--漢堡按鈕圖示-->
                 <input type="checkbox" id="switch-aside" class="d-none" style="position: absolute; top: 0; left: 0;">
@@ -30,10 +30,11 @@
                     <partial name="_AsidePartial"></partial>
                 </div>
             </div>
+            <div class="d-flex justify-content-between flex-grow-1"> 
            @* <link rel="icon" href="/icon/book.ico" type="image/x-icon">*@
             <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;"><span class="fa fa-book"></span> <strong>二手書交換平台</strong></a></div>
             
-            <p class="flex-grow-1"></p>
+           
             <div class="d-flex align-items-center justify-content-center px-1">
                 <label for="switch-search" class="mb-0 search"><i class="bi bi-search hamber-i"></i></label><!--漢堡按鈕圖示-->
                 <input type="checkbox" id="switch-search" class="d-none" style="position: absolute; top: 0; left: 0;">
@@ -47,6 +48,7 @@
                 </div>
             </div>
             <partial name="_LoginStatusPartial" />
+            </div>
         </nav>
     </header>
     <button onclick="topFunction()" id="topBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button>
