--- a/CoreMVC5_UsedBookProject/Views/GetCpu/CPUView.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/GetCpu/CPUView.cshtml
@@ -141,7 +141,7 @@
                             var currentTime = new Date().toLocaleTimeString();
 
                             if (cpuUsage > 60) {
-                                var warningMessage = "您的CPU高於60%了，請注意!";
+                                var warningMessage = "您的CPU高於60%了，可能影響到管理員控制中心，請注意!";
                                 alert(warningMessage);
                             }
 
@@ -197,7 +197,7 @@
                             var currentTime = new Date().toLocaleTimeString();
 
                             if (memoryUsage > 60) {
-                                var warningMessage = "您的記憶體高於60%了，請注意!";
+                                var warningMessage = "您的記憶體高於60%了，可能影響到管理員控制中心，請注意!";
                                 alert(warningMessage);
                             }
 
