--- a/CoreMVC5_UsedBookProject/Views/AdminToUser/UserEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminToUser/UserEdit.cshtml
@@ -3,7 +3,24 @@
 @{
     ViewData["Title"] = "使用者資料編輯";
 }
+<style>
+    .return {
+        padding: 10px;
+        text-decoration: none;
+        color: white;
+        background-color: blue;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
+    }
 
+        .return:hover {
+            text-decoration: none;
+            color: blue;
+            background-color: white;
+            border: 1px blue solid;
+        }
+</style>
 <h1>使用者資料編輯</h1>
 
 <h4>使用者個人資料</h4>
@@ -39,7 +56,7 @@
                 <span asp-validation-for="PhoneNo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="保存" class="btn btn-primary" />
+                    <input type="submit" value="保存" class="return" />
             </div>
           </div>
         </form>
@@ -47,6 +64,6 @@
 </div>
 
 <div>
-    <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="return">返回管理員資料列表</a>
+    <a asp-controller="AdminToUser" asp-action="UserData" class="return">返回使用者資料列表</a>
 </div>
 
