--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/EditHomeText.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/EditHomeText.cshtml
@@ -3,7 +3,24 @@
 @{
     ViewData["Title"] = "主頁面介紹區編輯";
 }
+<style>
+    .return {
+        padding: 10px;
+        text-decoration: none;
+        color: white;
+        background-color: blue;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
+    }
 
+        .return:hover {
+            text-decoration: none;
+            color: blue;
+            background-color: white;
+            border: 1px blue solid;
+        }
+</style>
 <h1>主頁面介紹區編輯</h1>
 
 <hr />
@@ -16,14 +33,14 @@
                 <span asp-validation-for="TextValue" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="保存" class="btn btn-primary" />
+                <input type="submit" value="保存" class="return" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="AdministratorHomePage" asp-action="AdminIndex" class="btn btn-primary">回到上一頁</a>
+    <a asp-controller="AdministratorHomePage" asp-action="AdminIndex" class="return">回到上一頁</a>
 </div>
 
 @section Scripts {
