--- a/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container-fluid">
-    <h1>登入</h1>
+    <h1 style="margin-top:15px;">登入</h1>
     <hr />
     <div class="row">
         <div class="col-12">
