--- a/CoreMVC5_UsedBookProject/Views/Home/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Wish.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model WishsViewModel
 <div class="container-fluid">
-    <h1>願望清單</h1>
+    <h1 style ="margin-top:15px;">願望清單</h1>
     @if (Model.Wishs.Count > 0)
     {
         @foreach (var item in Model.Wishs)
