--- a/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
@@ -34,7 +34,8 @@
 }
 else
 {
-    <div class="d-flex align-items-center justify-content-center">
-        <a href="@Url.Action("Login", "Account")" class="p-1 account-nav-a text-decoration-none">登入</a>
-    </div>
+    <div style="background-image: url('/adminimg/wood.jpg');margin-right:8px; padding:10px; height:59px; cursor:pointer;" onclick="window.location.href='@Url.Action("Login", "Account")'">
+        <a href="@Url.Action("Login", "Account")" style="position:relative; text-decoration:none; position:relative; font-size:20px; font-weight:bold; color:black;">登入</a>
+</div>
+    
 }
