--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -17,54 +17,42 @@
 </head>
 <body style="overflow-x:hidden; max-width:100%;">
     <header>
-        <nav class="bg-white border-bottom box-shadow d-flex px-3 flex-wrap " id="navbar" style="height:60px; justify-content:space-between;">
-
-
-
-            @*<div class="d-flex align-items-center justify-content-center">
-                <label for="switch-aside" class="mb-0 hamber"><i class="bi bi-list hamber-i"></i></label><!--漢堡按鈕圖示-->
-                <input type="checkbox" id="switch-aside" class="d-none" style="position: absolute; top: 0; left: 0;">
-            </div>*@
-
-
-
+        <nav class="bg-white border-bottom box-shadow d-flex px-3 flex-wrap" id="navbar" style="height: 60px; justify-content: space-between; flex-wrap: nowrap; background-image: url('/adminimg/wood.jpg'); background-repeat: no-repeat;">
             <div>
                 <div class="d-flex justify-content-between">
-                  <div style="padding:10px; width:200px;height:60px;" class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;"><span class="fa fa-book"></span> <strong>二手書交換平台</strong></a></div>
+                    <div style="padding: 10px; width: 200px; height: 60px;" class="d-flex align-items-center px-2">
+                        <a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 20px;">
+                            <span class="fa fa-book"></span> <strong>二手書交換平台</strong>
+                        </a>
+                    </div>
                     <div class="d-flex align-items-center justify-content-center px-1">
-                      <div class="aside-menu">
-                         <partial name="_AsidePartial"></partial>
-                      </div>
-                  </div>
+                        <div class="aside-menu">
+                            <partial name="_AsidePartial"></partial>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div style="display:flex;padding:10px; width:300px;height:60px;">
-                <label for="switch-search" class="mb-0 search"><i class="bi bi-search hamber-i"></i></label><!--漢堡按鈕圖示-->
+            <div style="display: flex; padding: 10px; width: 300px; height: 60px;">
                 <input type="checkbox" id="switch-search" class="d-none" style="position: absolute; top: 0; left: 0;">
-                <div class="search-menu">
-                    <form class="form-inline flex-grow-1 px-2" action="~/Home/SearchProducts" method="get">
-                        <input class="form-control mr-sm-2" type="search" placeholder="輸入書名或ISBN" id="searchInput" oninput="getPredictions()" aria-label="Search" name="name">
-                        <div id="predictionList"></div>
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><span class="fa fa-search"></span></button>
+                <div class="search-menu" style="width: 800px;background-image: url('/adminimg/wood.jpg');">
+                    <form class="form-inline flex-grow-1 px-2" style="display: flex; width: 400px;" action="~/Home/SearchProducts" method="get">
+                        <div style="display: flex;">
+                            <input class="form-control mr-sm-2" style="width: 350px;" type="search" placeholder="輸入書名或ISBN" id="searchInput" oninput="getPredictions()" aria-label="Search" name="name">
+                            <div id="predictionList"></div>
+                            <button class="btn btn-outline-success my-2 my-sm-0" style="width: 50px;" type="submit">
+                                <span class="fa fa-search"></span>
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
-
-
-            <div style="display:flex;padding:10px; width:80px;height:60px;">
-                 <partial name="_LoginStatusPartial" />
-            </div>
-            
-
-
-
-
+            <partial name="_LoginStatusPartial" />
         </nav>
+
     </header>
     <button onclick="topFunction()" id="topBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button>
     <div id="aside-right">
-        <main role="main" class="pb-5"style="margin-top:50px;">
+        <main role="main" class="pb-5">
             @RenderBody()
         </main>
         <footer class="border-top footer text-muted" style="background-color:white; margin-top:3px;">
