--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -33,7 +33,7 @@
         <h2>對方的商品 @Model.SellerName</h2>
         <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
             <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                <img src="Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
+                <img src="/Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='../pictures/DeafultBookPicture.jpg'" />
             </div>
             <div class="container-fluid my-2">
                 <h2>@Model.SellerTitle</h2>
@@ -48,7 +48,7 @@
         <h2>我的商品 @Model.BuyerName</h2>
         <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
             <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                <img src="Images/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
+                <img src="/Images/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='../pictures/DeafultBookPicture.jpg'" />
             </div>
             <table class="container-fluid">
                 <tr><td>@Html.DisplayNameFor(model => model.BuyerProductId)</td><td>@Model.BuyerProductId</td></tr>
