--- a/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
@@ -12,7 +12,7 @@
         //顯示使用者名稱+登出按鈕
         <div class="d-flex align-items-center justify-content-center">
             <label for="switch-login" class="mb-0 px-2" id="login">
-                <img class="p-2" src="Images/Users/@User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value/@User.Claims.FirstOrDefault(c => c.Type.Contains("givenname")).Value" asp-append-version="true" alt="img" style="border-radius: 50%; width: 100%; aspect-ratio: 1 / 1; max-width: 50px; overflow: hidden; object-fit: cover;" onerror="this.src='pictures/emptyusericon.png';">
+                <img class="p-2" src="/Images/Users/@User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value/@User.Claims.FirstOrDefault(c => c.Type.Contains("givenname")).Value" asp-append-version="true" alt="img" style="border-radius: 50%; width: 100%; aspect-ratio: 1 / 1; max-width: 50px; overflow: hidden; object-fit: cover;" onerror="this.src='/Pictures/EmptyUserIcon.png';">
                 <a id="login-nickname" class="px-2" style="width: 150px;">
                     @User.Identity.Name
                 </a>
@@ -34,8 +34,12 @@
 }
 else
 {
-    <div style="background-image: url('/adminimg/wood.jpg');margin-right:8px; padding:10px; height:59px; cursor:pointer;" onclick="window.location.href='@Url.Action("Login", "Account")'">
-        <a href="@Url.Action("Login", "Account")" style="position:relative; text-decoration:none; position:relative; font-size:20px; font-weight:bold; color:black;">登入</a>
-</div>
-    
+    <div class="d-flex align-items-center justify-content-center">
+        <div style="background-image: url('/adminimg/wood.jpg');margin-right:8px; padding:10px; height:59px; cursor:pointer;" onclick="window.location.href='@Url.Action("Login", "Account")'">
+            <a href="@Url.Action("Login", "Account")" style="position:relative; text-decoration:none; position:relative; font-size:20px; font-weight:bold; color:black;">登入</a>
+        </div>
+        <div style="background-image: url('/adminimg/wood.jpg');margin-right:8px; padding:10px; height:59px; cursor:pointer;" onclick="window.location.href='@Url.Action("Login", "Account")'">
+            <a href="@Url.Action("RegisterUserName", "Account")" style="position:relative; text-decoration:none; position:relative; font-size:20px; font-weight:bold; color:black;">註冊</a>
+        </div>
+    </div>
 }
